--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
   "status": "true",
-  "text": "متن تبلیغ",
-  "url": "http://example.link"
+  "text": "این یک متن جهت تست میباشد",
+  "url": "https://mr-alireza.ir"
 }
