--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "status": true,
+  "status": false,
   "text": "این یک متن جهت تست میباشد.اکنون تبلیغات آنلاین نمایش داده میشود",
   "url": "https://github.com/Incognito-Coder"
 }
