--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
   "status": false,
   "text": "این یک متن جهت تست میباشد.اکنون تبلیغات آنلاین نمایش داده میشود",
-  "url": "https://github.com/Incognito-Coder"
+  "url": "https://github.com/Incognito-Coder",
+  "showDefault": true
 }
