--- a/config.json
+++ b/config.json
@@ -2,5 +2,5 @@
   "status": false,
   "text": "این یک متن جهت تست میباشد.اکنون تبلیغات آنلاین نمایش داده میشود",
   "url": "https://github.com/Incognito-Coder",
-  "showDefault": true
+  "showDefault": false
 }
