--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-  "status": false,
+  "status": true,
   "text": "این یک متن جهت تست میباشد.اکنون تبلیغات آنلاین نمایش داده میشود",
-  "url": "https://github.com/Incognito-Coder",
+  "url": "https://github.com/V2grop",
   "showDefault": false
 }
