--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status": true,
-  "text": "این یک متن جهت تست میباشد.اکنون تبلیغات آنلاین نمایش داده میشود",
+  "text": "خرید اکانت نامحدود ماهانه با قیمت ۷۰ تومان به لینک روی لینک روبه رو کلیک نمایید ",
   "url": "https://github.com/V2grop",
-  "showDefault": false
+  "showDefault": true
 }
