--- a/config.json
+++ b/config.json
@@ -2,5 +2,5 @@
   "status": true,
   "text": "خرید اکانت نامحدود ماهانه با قیمت ۷۰ تومان به لینک روی لینک روبه رو کلیک نمایید ",
   "url": "https://github.com/V2grop",
-  "showDefault": true
+  "showDefault": false
 }
