--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status": true,
-  "text": "خرید اکانت نامحدود ماهانه ۸۰ تومان روی لینک روبه رو کلیک نمایید ",
+  "text": "خرید اکانت روی لینک روبه رو کلیک نمایید ",
   "url": "http://T.me/V2grop",
   "showDefault": false
 }
