--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "status": false,
+  "status": true,
   "text": "خرید اکانت روی لینک روبه رو کلیک نمایید ",
   "url": "http://T.me/V2grop",
   "showDefault": false
