--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-  "status": false,
-  "text": "خرید اکانت روی لینک روبه رو کلیک نمایید ",
+  "status": true,
+  "text": "@V2grop خرید اکانت روی لینک روبه رو کلیک نمایید🛒 ",
   "url": "http://T.me/V2grop",
   "showDefault": false
 }
