--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "status": true,
   "text": "@V2grop خرید اکانت روی لینک [008B8B] test تست روبه رو کلیک نمایید🛒 ",
-  "color" : "0xAF001D"'
+  "color" : "0xAF001D",
   "url": "http://T.me/V2grop",
   "showDefault": false
 }
