--- a/config.json
+++ b/config.json
@@ -3,6 +3,6 @@
   "text": "@V2grop خرید اکانت روی لینک روبه رو کلیک نمایید🛒 ",
   "url": "http://T.me/V2grop",
   "showDefault": false,
-  "fourthLineColor": "pink"
+  "fourthLineColor": "pink"'
 }
 
