--- a/config.json
+++ b/config.json
@@ -1,8 +1,6 @@
 {
   "status": true,
-  "text": "@V2grop خرید اکانت روی لینک روبه رو کلیک نمایید🛒 ",
-  "fourthLineColor": "pink",
+  "text": "@V2grop خرید اکانتکلیک نمایید 🛒 ",
   "url": "http://T.me/V2grop",
-  "showDefault": false,
+  "showDefault": false
 }
-
