--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status": true,
-  "text": "@V2grop خرید اکانتکلیک نمایید 🛒 ",
+  "text": "@V2grop خرید اکانتکلیک نمایی  ",
   "url": "http://T.me/V2grop",
   "showDefault": false
 }
