--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status": true,
-  "\u001b[35m@V2grop\u001b[39m خرید اکانتکلیک نمایید ",
+  "text": "@V2grop خرید اکانت روی لینک روبه رو کلیک نمایید ",
   "url": "http://T.me/V2grop",
   "showDefault": false
 }
