--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status": true,
-  "text": "@V2grop خرید اکانت روی لینک روبه رو کلیک نمایید ",
-  "url": "http://T.me/V2grop",
+  "text": "این یک متن جهت تست میباشد.اکنون تبلیغات آنلاین نمایش داده میشود",
+  "url": "https://github.com/V2grop",
   "showDefault": false
 }
