--- a/config.json
+++ b/config.json
@@ -2,6 +2,5 @@
   "status": true,
   "text": "🛒اکنون تبلیغات آنلاین نمایش داده میشود🛒",
   "url": "https://github.com/V2grop",
-  "showDefault": false
-  
+  "showDefault": false,
 }
