--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status": true,
-  "text": "🛒اکنون تبلیغات آنلاین نمایش داده میشود🛒",
+  "text": "این بخش برای نمایش تبلیغات از سمت سرور است و فعلا این متن که نوشته شده برای تست عملکرد صحیح برنامه است",
   "url": "https://github.com/V2grop",
   "showDefault": false
 }
