--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status": false,
-  "text": "این بخش برای نمایش تبلیغات از سمت سرور است و فعلا این متن که نوشته شده برای تست عملکرد صحیح برنامه است",
+  "text": "نیدجهت تهیه اکانت های نامحدود ماهانه اول نصب بعد پرداخت فقط ۷۰ هزار تومان روی ای دی بز @v2gropبزنید",
   "url": "https://github.com/V2grop",
   "showDefault": false
 }
