--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "status": false,
+  "status": true,
   "text": "نیدجهت تهیه اکانت های نامحدود ماهانه اول نصب بعد پرداخت فقط ۷۰ هزار تومان روی ای دی بز @v2gropبزنید",
   "url": "https://github.com/V2grop",
   "showDefault": false
