--- a/config.json
+++ b/config.json
@@ -1,6 +1,8 @@
 {
-  "status": true,
-  "text": "نیدجهت تهیه اکانت های نامحدود ماهانه اول نصب بعد پرداخت فقط ۷۰ هزار تومان روی ای دی بز @v2gropبزنید",
+  "status": false,
+  "text": "جهت خرید اکانت ماهانه نامحدود فقط ۷۰ هزارتومان روی علامت سبد روبه رو کلیک کنید 
+🛒🛒🛒",
   "url": "https://github.com/V2grop",
   "showDefault": false
 }
+
