--- a/config.json
+++ b/config.json
@@ -1,8 +1,6 @@
 {
-  "status": false,
-  "text": "جهت خرید اکانت ماهانه نامحدود فقط ۷۰ هزارتومان روی علامت سبد روبه رو کلیک کنید 
-🛒🛒🛒",
+  "status": true,
+  "text": "این یک متن جهت تست میباشد.اکنون تبلیغات آنلاین نمایش داده میشود",
   "url": "https://github.com/V2grop",
   "showDefault": false
 }
-
