--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status": true,
-  "text": "این یک متن جهت تست میباشد.اکنون تبلیغات آنلاین نمایش داده میشود",
-  "url": "https://github.com/V2grop",
+  "text": "خرید اشتراک نامحدود تمامی اپراتور ها فقط ۹۹ هزار تومن کلیک کنید",
+  "url": "https://t.me/V2grop1",
   "showDefault": false
 }
