--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status": true,
-  "text": "@V2grop1.  👈👈خرید اشتراک نامحدود تمامی اپراتور ها فقط ۹۹ هزار تومن کلیک کنید",
+  "text": "@V2grop1    👈👈خرید اشتراک نامحدود تمامی اپراتور ها فقط ۹۹ هزار تومن کلیک کنید",
   "url": "https://t.me/V2grop1",
   "showDefault": false
 }
