--- a/config.json
+++ b/config.json
@@ -2,5 +2,5 @@
   "status": false,
   "text": "  خریدار ناتکویین های تلگرامی شما هستیم به قیمت صرافی بایننس 🪙 👈👈 کلیک کنید🪙",
   "url": "https://t.me/notcoinshoopi",
-  "showDefault": true
+  "showDefault": false
 }
