--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status": false,
-  "text": "  خریدار ناتکویین های تلگرامی شما هستیم به قیمت صرافی بایننس 🪙 👈👈 کلیک کنید🪙",
-  "url": "https://t.me/notcoinshoopi",
-  "showDefault": false
+  "text": " 🔴سلام اگه مشکلی دارید چند باربا نت روشن بروزرسانی اشتراک بزنیددر صورت حل نشدن روی این تب کلیک کنید به پشتیبانی ما وصل میشید🔴",
+  "url": "https://t.me/V2grop1",
+  "showDefault": true
 }
