--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "status": false,
+  "status": true,
   "text": " 🔴سلام اگه مشکلی دارید چند باربا نت روشن بروزرسانی اشتراک بزنیددر صورت حل نشدن روی این تب کلیک کنید به پشتیبانی ما وصل میشید🔴",
   "url": "https://t.me/V2grop1",
   "showDefault": true
