--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-  "status": true,
-  "text": " 🔴سلام اگه مشکلی دارید چند باربا نت روشن بروزرسانی اشتراک بزنیددر صورت حل نشدن روی این تب کلیک کنید به پشتیبانی ما وصل میشید🔴",
+  "status": false,
+  "text": "  خرید اشتراک تانل شده نامحدود با ضمانت تمامی اپراتور ها در چند لوکیشن فقط ۹۹ هزار تومن 👈👈 کلیک کنید",
   "url": "https://t.me/V2grop1",
   "showDefault": true
 }
