--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status": true,
-  "text": " 🔴سلام اگه مشکلی دارید چند باربا نت روشن بروزرسانی اشتراک بزنیددر صورت حل نشدن روی این تب کلیک کنید به پشتیبانی ما وصل میشید🔴",
-  "url": "https://t.me/V2grop1",
+  "text": "🪙خریداری و پرداخت انی ناتکویین هایی تلگرامی شما به قیمت صرافی برای فروش اینجا کلیک کنید 🪙",
+  "url": "https://www.instagram.com/saman_kohii?igsh=dXAzbzRobWU3ZXk4",
   "showDefault": false
 }
