--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "status": true,
+  "status": false,
   "text": "🪙🪙🪙🪙خریداری و پرداخت انی ناتکویین هایی تلگرامی شما به قیمت صرافی برای فروش اینجا کلیک کنید 🪙🪙🪙🪙",
   "url": "https://www.instagram.com/saman_kohii?igsh=dXAzbzRobWU3ZXk4",
   "showDefault": false
