--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-  "status": false,
-  "text": "🪙🪙🪙🪙خریداری و پرداخت انی ناتکویین هایی تلگرامی شما به قیمت صرافی برای فروش اینجا کلیک کنید 🪙🪙🪙🪙",
+  "status": true,
+  "text": "🪙🪙اموزش اتصال ربات همستر به کیف پول و سایر نکات راجب بازی را با کلیک بر روی این ایکون دنبال کنید 🐿🦫",
   "url": "https://www.instagram.com/saman_kohii?igsh=dXAzbzRobWU3ZXk4",
   "showDefault": false
 }
