--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "status": true,
+  "status": false,
   "text": "🪙🪙اموزش اتصال ربات همستر به کیف پول و سایر نکات راجب بازی را با کلیک بر روی این ایکون دنبال کنید 🐿🦫",
   "url": "https://www.instagram.com/saman_kohii?igsh=dXAzbzRobWU3ZXk4",
   "showDefault": false
