--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status": false,
-  "text": "🪙🪙اموزش اتصال ربات همستر به کیف پول و سایر نکات راجب بازی را با کلیک بر روی این ایکون دنبال کنید 🐿🦫",
-  "url": "https://www.instagram.com/saman_kohii?igsh=dXAzbzRobWU3ZXk4",
+  "text": "🪙🪙  اگه از بازی همستر جا موندی نگران نباش کافی روی این کادر بزنی تا وارد بازی شی وبازیو شروع کنی 🐿🦫",
+  "url": "https://t.me/hamster_koMbat_bot/start?startapp=kentId707530660",
   "showDefault": false
 }
