--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "status": false,
+  "status":  true,
   "text": "🪙🪙  اگه از بازی همستر جا موندی نگران نباش کافی روی این کادر بزنی تا وارد بازی شی وبازیو شروع کنی 🐿🦫",
   "url": "https://t.me/hamster_koMbat_bot/start?startapp=kentId707530660",
   "showDefault": false
