--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-  "status":  false,
-  "text": "🪙🪙  اگه از بازی همستر جا موندی نگران نباش کافی روی این کادر بزنی تا وارد بازی شی وبازیو شروع کنی 🐿🦫",
-  "url": "https://t.me/hamster_koMbat_bot/start?startapp=kentId707530660",
+  "status":  true,
+  "text": "سلام اگه در وی پی ان تون اختلال دارید اول خاموش کنید برنامه رو و هر چند ساعت یک بار از منو سمت چپ بروز رسانی اشتراک رو بزنید✅️",
+  "url": "https://t.me/V2grop1",
   "showDefault": false
 }
