--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status":  true,
-  "text": "سلام اگه در وی پی ان تون اختلال دارید اول خاموش کنید برنامه رو و هر چند ساعت یک بار از منو سمت چپ بروز رسانی اشتراک رو بزنید✅️",
+  "text": "⛔️❌️توجه:اگه در وی پی ان تون اختلال داریداول برنامه روخاموش کنیدوهر ساعت چند بار از منو سمت چپ بروز رسانی اشتراک رو بزنید✅️",
   "url": "https://t.me/V2grop1",
   "showDefault": false
 }
