--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "status":  true,
+  "status":  false,
   "text": "⛔️❌️توجه:اگه در وی پی ان تون اختلال داریداول برنامه روخاموش کنیدوهر ساعت چند بار از منو سمت چپ بروز رسانی اشتراک رو بزنید✅️",
   "url": "https://t.me/V2grop1",
   "showDefault": false
