--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-  "status":  false,
-  "text": "⛔️❌️توجه:اگه در وی پی ان تون اختلال داریداول برنامه روخاموش کنیدوهر ساعت چند بار از منو سمت چپ بروز رسانی اشتراک رو بزنید✅️",
+  "status":  true,
+  "text": "⛔️❌️توجه:در صورت  هرگونه مشکل و کندی در وی پی ان با کلیک بر روی این تب به پشتبانی ما وصل میشید و مشکلتون حل میکنیم  ✅️",
   "url": "https://t.me/V2grop1",
   "showDefault": false
 }
