--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status":  true,
-  "text": "⛔️❌️توجه:در صورت  هرگونه مشکل و کندی در وی پی ان با کلیک بر روی این تب به پشتبانی ما وصل میشید و مشکلتون حل میکنیم  ✅️",
+  "text": "⛔️❌️توجه:در صورت  هرگونه مشکل و کندی در وی پی ان با کلیک بر روی این کادر به پشتبانی ما وصل میشید و مشکلتون حل میکنیم  ✅️",
   "url": "https://t.me/V2grop1",
   "showDefault": false
 }
