--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "status":  true,
+  "status":  false,
   "text": "⛔️❌️توجه:در صورت هرگونه مشکل و کندی در وی پی ان با کلیک بر روی این کادر به پشتبانی ما وصل میشید و مشکلتون حل میکنیم ✅️",
   "url": "https://t.me/V2grop1",
   "showDefault": false
