--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status":  false,
-  "text": "⛔️❌️توجه:در صورت هرگونه مشکل و کندی در وی پی ان با کلیک بر روی این کادر به پشتبانی ما وصل میشید و مشکلتون حل میکنیم ✅️",
+  "text": "⛔️❌️توجه:لطفا بعد از ورود به برنامه یک بار بروز رسانی اشتراک رو بزنید تا اخرین اپدیت ها از سمت ما برای شما اعمال شود✅️",
   "url": "https://t.me/V2grop1",
   "showDefault": false
 }
