--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "status":  false,
+  "status":  true,
   "text": "⛔️❌️توجه:لطفا بعد از ورود به برنامه یک بار بروز رسانی اشتراک رو بزنید تا اخرین اپدیت ها از سمت ما برای شما اعمال شود✅️",
   "url": "https://t.me/V2grop1",
   "showDefault": false
