--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status":  true,
-  "text": "⛔️توجه:لطفا بعد از ورود به برنامه فیلترشکن را خاموش کرده ویک بار بروز رسانی اشتراک رو بزنید تا اخرین اپدیت ها از سمت ما برای شما اعمال شود✅️",
+  "text": "⛔️توجه:لطفا قبل از روشن کردن فیلترشکن یک بار بروز رسانی اشتراک رو بزنید تا اخرین اپدیت ها از سمت ما برای شما اعمال شود✅️",
   "url": "https://t.me/V2grop1",
   "showDefault": false
 }
