--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status":  true,
-  "text": "⛔️توجه:لطفا قبل از روشن کردن فیلترشکن یک بار بروز رسانی اشتراک رو بزنید تا اخرین اپدیت ها از سمت ما برای شما اعمال شود✅️",
-  "url": "https://t.me/V2grop1",
+  "text": "برنامه فیلترشکن شما قدیمی است برای دریافت اخرین نسخه برنامه روی این✅️کلیک کرده ودانلودنصب نمایید",
+  "url": "https://quickshare.samsungcloud.com/bTLOOV2orryK",
   "showDefault": false
 }
