--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status":  true,
-  "text": "برنامه فیلترشکن شما قدیمی است برای دریافت اخرین نسخه برنامه روی این✅️کلیک کرده ودانلودنصب نمایید",
+  "text": " توجه⚠️:برنامه فیلترشکن شما قدیمی است برای دریافت اخرین نسخه برنامه روی این✅️کلیک کرده ودانلودنصب نمایید",
   "url": "https://quickshare.samsungcloud.com/bTLOOV2orryK",
   "showDefault": false
 }
