--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "status":  false,
+  "status":  true,
   "text": " توجه⚠️:برنامه فیلترشکن شما قدیمی است برای دریافت اخرین نسخه برنامه روی این✅️کلیک کرده ودانلودنصب نمایید",
   "url": "http://194.26.229.219:9721/d059148bf24c412281",
   "showDefault": false
