--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-  "status":  false,
-  "text": " توجه⚠️:برنامه فیلترشکن شما قدیمی است برای دریافت اخرین نسخه برنامه روی این✅️کلیک کرده ودانلودنصب نمایید",
+  "status":  true,
+  "text": "❤️سلام بخاطر اختلال های ناشی از قطع برق مدت ۵ روز اضافه به تمام کاربران اضاف شد تعدادروزتون رو ازطریق بنر چک کنید 🙏",
   "url": "http://194.26.229.219:9721/d059148bf24c412281",
   "showDefault": false
 }
