--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status":  true,
-  "text": "❤️❤️سلام بخاطر اختلال های ناشی از قطع برق مدت ۵ روز اضافه به تمام کاربران اضاف شد تعدادروزتون رو ازطریق بنر چک کنید 🙏",
+  "text": "اپدیت:برنامه شما قدیمی است برای دریافت سرعت و پایداری بهتر اینجا 👈✅️کلیک کنید واپ جدیدرا دانلودونصب نمیاید⚠️",
   "url": "http://194.26.229.219:9721/16a126033f56418451",
   "showDefault": false
 }
