--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status":  true,
-  "text": "اپدیت:برنامه شما قدیمی است برای دریافت سرعت و پایداری بهتر اینجا 👈✅️کلیک کنید واپ جدیدرا دانلودونصب نمیاید⚠️",
+  "text": "پشتیبانی @v2grop1 ⚠️⛔️اپدیت:برنامه شما قدیمی است برای دریافت سرعت و پایداری بهتر اینجا 👈✅️کلیک کنید و اپ جدید را دانلود ونصب نمیاید⚠️",
   "url": "http://194.26.229.219:9721/16a126033f56419341",
   "showDefault": false
 }
