--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status":  true,
-  "text": "⚠️⛔️اپدیت:برنامه شما قدیمی است برای دریافت سرعت و پایداری بهتر اینجا 👈✅️کلیک کنیدواپ جدیدرا دانلودونصب نمیاید-📧pv:v2grop1",
+  "text": "⚠️⛔️فیلترشکنتو تاحالا اپدیت نکردی اختلال داری تو سرعت گاهی چون برنامت قدیمه با کلیک روی اینجا👈 ✅️✅️برنامتو دانلود و اپدیت کن",
   "url": "http://194.26.229.219:9721/16a126033f56420958",
   "showDefault": false
 }
