--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "status":  true,
+  "status":  false,
   "text": "⚠️⛔️فیلترشکنتو تاحالا اپدیت نکردی اختلال داری تو سرعت گاهی چون برنامت قدیمه با کلیک روی اینجا👈 ✅️✅️برنامتو دانلود و اپدیت کن",
   "url": "http://194.26.229.219:9721/16a126033f56425729",
   "showDefault": false
