--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status":  false,
-  "text": "⚠️⛔️فیلترشکنتو تاحالا اپدیت نکردی اختلال داری تو سرعت گاهی چون برنامت قدیمه با کلیک روی اینجا👈 ✅️✅️برنامتو دانلود و اپدیت کن",
-  "url": "http://194.26.229.219:9721/16a126033f56425729",
+  "text": "🆘️🆘️🐶اطلاعیه:داگز لیست شد جهت مشاوره و اطلاع از قیمت فروش فقط کافیست روی ستاره👈*️⃣فشار دهید و وارد اینستا ما شوید یا با شماره ☎️09212559424 تماس بگیرید 🆘️🆘🐶",
+  "url": "https://www.instagram.com/saman_kohii?igsh=dXAzbzRobWU3ZXk4",
   "showDefault": false
 }
