--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status":  false,
-  "text": "🆘️🆘️🐶اطلاعیه:داگزلیست شدجهت مشاوره و اطلاع از قیمت فروش فقط کافیست روی ستاره👈*️⃣زده ووارد اینستا ما شوید یا با شماره ☎️09212559424 تماس بگیرید 🆘️🆘🐶",
+  "text": "🆘️🆘️🐶:داگزلیست شدجهت مشاوره و اطلاع از قیمت فروش فقط کافیست روی ستاره👈*️⃣زده ووارد اینستا ما شوید یا با شماره ☎️09212559424 تماس بگیر 🐶",
   "url": "https://www.instagram.com/saman_kohii?igsh=dXAzbzRobWU3ZXk4",
   "showDefault": false
 }
