--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status":  true,
-  "text": "🆘️🆘️🐶:داگزلیست شدجهت فروش فقط کافیست روی ستاره👈*️⃣زده ووارد اینستا ما شوید یا با شماره ☎️09212559424 تماس بگیر 🐶",
+  "text": "🆘️🆘️🐶:داگزلیست شدجهت فروش و مشاوره فقط کافیست روی ستاره👈*️⃣زده و وارد اینستا ما شوید  🐶",
   "url": "https://www.instagram.com/saman_kohii?igsh=dXAzbzRobWU3ZXk4",
   "showDefault": false
 }
