--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status":  true,
   "text": "🆘️⛔️توجه به دلیل اختلالات  اینترنت لطفا دائما دکمه بروز رسانی اشتراک رو بزنید تا اختلالاتون رفع بشه ⛔️",
-  "url": "https://www.instagram.com/saman_kohii?igsh=dXAzbzRobWU3ZXk4",
+  "url": "T.me//:V2grop1",
   "showDefault": false
 }
