--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "status":  true,
+  "status":  false,
   "text": "🆘️⛔️توجه به دلیل اختلالات  اینترنت لطفا دائما دکمه بروز رسانی اشتراک رو بزنید تا اختلالاتون رفع بشه ⛔️",
   "url": "T.me//:V2grop1",
   "showDefault": false
