--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-  "status":  false,
-  "text": "🆘️⛔️توجه به دلیل اختلالات  اینترنت لطفا دائما دکمه بروز رسانی اشتراک رو بزنید تا اختلالاتون رفع بشه ⛔️",
+  "status":  true,
+  "text": "⛔️⛔️سلام قطعی به علت تعمییرات سرور خارجه و موقطعیه و رفع میشود تا چند ساعت دیگه 🚫🚫🚫",
   "url": "T.me//:V2grop1",
   "showDefault": false
 }
