--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status":  true,
-  "text": "⛔️⛔️سلام قطعی به علت تعمییرات سرور خارجه و موقطعیه و رفع میشود تا چند ساعت دیگه 🚫🚫🚫",
+  "text": "🚫مشکل سرور المان برطرف شد ✅️🚫",
   "url": "T.me//:V2grop1",
   "showDefault": false
 }
