--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "status":  true,
+  "status":  false,
   "text": "🚫مشکل سرور المان برطرف شد ✅️🚫",
   "url": "T.me//:V2grop1",
   "showDefault": false
