--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-  "status":  false,
-  "text": "🚫مشکل سرور المان برطرف شد ✅️🚫",
+  "status":  true,
+  "text": "⛔️اگر از اینترنت سیمکارت استفاده میکنید برای افزایش سرعت شبانه از کانفینگ های مستقیم استفاده نمایید ✅️",
   "url": "T.me//:V2grop1",
   "showDefault": false
 }
