--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status":  true,
-  "text": "⛔️⛔️اگر از اینترنت سیمکارت استفاده میکنید برای افزایش سرعت شبانه از کانفینگ با عنوان مستقیم استفاده نمایید ✅️",
+  "text": "⛔️⛔️توجه:اگر از اینترنت سیمکارت استفاده میکنید برای🚀افزایش سرعت شبانه از کانفینگ با عنوان مستقیم استفاده نمایید ✅️",
   "url": "T.me//:V2grop1",
   "showDefault": false
 }
