--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "status":  true,
+  "status":  false,
   "text": "⛔️⛔️سرور المان در حال اپدیت است تا کمتر از یک ساعت دیگر ارتباط  وصل میشود   ✅️",
   "url": "T.me//:V2grop1",
   "showDefault": false
