--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-  "status":  false,
-  "text": "⛔️⛔️سرور المان در حال اپدیت است تا کمتر از یک ساعت دیگر ارتباط  وصل میشود   ✅️",
+  "status":  true,
+  "text": ":✅️توجه:اگه از اینترنت سیمکارت استفاده میکنید برای🚀افزایش سرعت شبانه از کانفینگ با عنوان مستقیم استفاده نمایید⛔️⛔️",
   "url": "T.me//:V2grop1",
   "showDefault": false
 }
