--- a/config.json
+++ b/config.json
@@ -2,5 +2,5 @@
   "status":  false,
   "text": "✅️توجه:اگه از اینترنت سیمکارت استفاده میکنید برای🚀افزایش سرعت شبانه از کانفینگ با عنوان مستقیم استفاده نمایید⛔️⛔️",
   "url": "https://T.me/V2grop1",
-  "showDefault": false
+  "showDefault": true
 }
