--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status":  true,
-  "text": "✅️توجه:اگه از اینترنت سیمکارت استفاده میکنید برای🚀افزایش سرعت شبانه از کانفینگ با عنوان مستقیم استفاده نمایید⛔️⛔️",
-  "url": "https://T.me/V2grop1",
+  "text": "اپدیت:برای افزایش سرعت و اضافه شدن قابلیت های جدید با یک بار کلیک بر روی این 🟢دکمه🟢 نسخه جدید را دریافت و نصب نمایید ⛔️⛔️",
+  "url": "http://194.26.229.219:9721/78765294deec540892",
   "showDefault": false
 }
