--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "status":  true,
+  "status":  false,
   "text": "🆕️اپدیت:برای افزایش سرعت و اضافه شدن قابلیت های جدیدبا یک بارکلیک برروی این🟢دکمه🟢نسخه جدیدرادریافت و نصب نمایید ⛔️",
   "url": "http://194.26.229.219:9721/78765294deec540892",
   "showDefault": false
