--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "status":  false,
+  "status":  true,
   "text": "🆕️اپدیت:برای افزایش سرعت و اضافه شدن قابلیت های جدیدبا یک بارکلیک برروی این🟢دکمه🟢نسخه جدیدرادریافت و نصب نمایید ⛔️",
   "url": "https://s32.picofile.com/file/8481014784/V2grop_1_9_22.apk.html",
   "showDefault": false
