--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status":  true,
   "text": "🆕️اپدیت:برای افزایش سرعت و اضافه شدن قابلیت های جدیدبا یک بارکلیک برروی این🟢دکمه🟢نسخه جدیدرادریافت و نصب نمایید ⛔️",
-  "url": "https://s32.picofile.com/file/8481014784/V2grop_1_9_22.apk.html",
+  "url": "http://194.26.229.219:8282/78765294deec542855",
   "showDefault": false
 }
