--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
-{
+6{
   "status":  true,
-  "text": "🆕️اپدیت:برای افزایش سرعت و اضافه شدن قابلیت های جدیدبا یک بارکلیک برروی این🟢دکمه🟢نسخه جدیدرادریافت و نصب نمایید ⛔️",
+  "text": "🆕️⭕️❌️‼️اپدیت:توجه توجه برای افزایش سرعت و دریافت قابلیت جدید روی این 🟢دکمه🟢بزن وبرنامه رو اپدیت کن ⛔️",
   "url": "http://194.26.229.219:8282/78765294deec542855",
   "showDefault": false
 }
