--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-  "status":  false,
+  "status":  true,
   "text": "🆕️⭕️❌️‼️اپدیت:توجه توجه برای افزایش سرعت و دریافت قابلیت جدید روی این 🟢دکمه🟢بزن وبرنامه رو اپدیت کن ⛔️",
-  "url": "http://194.26.229.219:8282/78765294deec542855",
+  "url": "http://194.26.229.219:9721/78765294deec543023",
   "showDefault": false
 }
