--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status":  true,
   "text": "🆕️⭕️❌️‼️اپدیت:توجه توجه برای افزایش سرعت و دریافت قابلیت جدید روی این 🟢دکمه🟢بزن وبرنامه رو اپدیت کن ⛔️",
-  "url": "http://194.26.229.219:9721/78765294deec551732",
+  "url": "https://s32.picofile.com/file/8481014784/V2grop_1_9_22.apk.html",
   "showDefault": false
 }
