--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "status":  false,
+  "status":  true,
   "text": "🎄🎄🎄❄️❄️v2group❄️❄️🎄🎄🎄",
   "url": "https://s32.picofile.com/file/8481014784/V2grop_1_9_22.apk.html",
   "showDefault": false
