--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status":  true,
-  "text": "🎄🎄🎄❄️❄️سرویس تونل رو ارتقا دادیم از سرعت لذت ببرید❄️❄️🎄🎄🎄",
+  "text": "🎄🎄🎄❄️❄️کیفیت و سرعت سرویس های تونل ارتقا پیدا کرد ❄️❄️🎄🎄🎄",
   "url": "https://s32.picofile.com/file/8481014784/V2grop_1_9_22.apk.html",
   "showDefault": false
 }
