--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status":  true,
-  "text": "📽🎬🆕️پخش قسمت اول سریال اسکویید گیم برای پخش ابتدا  وی پی ان خود را خاموش کرده و بروی این دکمه کلیک کنید 🆗️",
+  "text": "📽🎬🆕️  پخش قسمت اول سریال اسکویید گیم برای پخش ابتدا  وی پی ان خود را خاموش کرده و بروی این دکمه کلیک کنید 🆗️👈🔴",
   "url": "https://fardisfilm.com/playonline/?id=16378&season=4&ep=1",
   "showDefault": false
 }
