--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status":  true,
-  "text": "🎬🆕️قسمت اول سریال اسکویید گیم برای پخش ابتدا وی پی ان خود را حتما ❌️خاموش کرده و بروی این دکمه کلیک کنید👈🆗️🔴",
-  "url": "https://fardisfilm.com/playonline/?id=16378&season=4&ep=1",
+  "text": "🎬🆕️قسمت دوم۲ سریال اسکویید گیم برای پخش ابتدا وی پی ان خود را حتما ❌️خاموش کرده و بروی این دکمه کلیک کنید👈🆗️🔴",
+  "url": "https://traffic.upera.tv/embed/3012999?ref=7EzC",
   "showDefault": false
 }
