--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status":  true,
-  "text": "🎬🆕️قسمت دوم۲ سریال اسکویید گیم برای پخش ابتدا وی پی ان خود را حتما ❌️خاموش کرده و بروی این دکمه کلیک کنید👈🆗️🔴",
+  "text": "⛔️⛔️⛔️سرور ها در حال تعمیر و اپدیت میباشند اختلال بزودی رفع خواهد شد 🔴",
   "url": "https://traffic.upera.tv/embed/3012999?ref=7EzC",
   "showDefault": false
 }
