--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "status":  true,
+  "status":  false,
   "text": "🎬🆕️قسمت دوم۲ سریال اسکویید گیم برای پخش ابتدا وی پی ان خود را حتما ❌️خاموش کرده و بروی این دکمه کلیک کنید👈🆗️🔴",
   "url": "https://traffic.upera.tv/embed/3012999?ref=7EzC",
   "showDefault": false
