--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-  "status":  false,
-  "text": "🎬🆕️قسمت دوم۲ سریال اسکویید گیم برای پخش ابتدا وی پی ان خود را حتما ❌️خاموش کرده و بروی این دکمه کلیک کنید👈🆗️🔴",
-  "url": "https://traffic.upera.tv/embed/3012999?ref=7EzC",
+  "status":  true,
+  "text": "⛔️🟥  توجه:برای افزایش سرعت شبانه با نت سیمکارت لطفا از سرور های با عنوان مستقیم استفاده کنید⛔️  اپدیت برنامه با زدن دکمه سبز🟢",
+  "url": "https://s32.picofile.com/file/8481014784/V2grop_1_9_22.apk.html",
   "showDefault": false
 }
