--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status":  true,
-  "text": "⛔️درصورت بروز هرگونه مشکلی با زدن روی این نوشته به پشتیبانی تلگرام پیام دهید🟢❌️🟢",
-  "url": "https://t.me/Cafefilm00",
+  "text": "⛔️🟥  توجه:برای افزایش سرعت شبانه با نت سیمکارت لطفا از سرور های با عنوان مستقیم استفاده کنید⛔️  اپدیت برنامه با زدن دکمه سبز🟢",
+  "url": "https://s32.picofile.com/file/8481014784/V2grop_1_9_22.apk.html",
   "showDefault": false
 }
