--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status":  true,
-  "text": "🌏🚀👑v2grop Leader in VPN speed👑🚀🌍",
+  "text": "🌏🚀👑 دیگه نگران حجم بستت نباش با خدمات سرور تونل نیم بها  حجم بسته اینترنت شما سه برابر میشه و خیلی دیر تر تمام میشه ",
   "url": "https://s32.picofile.com/file/8481014784/V2grop_1_9_22.apk.html",
   "showDefault": false
 }
