--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status":  true,
-  "text": "🌏🚀👑 دیگه نگران حجم بستت نباش❗️با سرور تونل نیم بهاحجم بسته اینترنت شما سه برابر میشه و خیلی دیر تر تمام میشه ",
+  "text": "🔵🟡🟣سرور نیم بها چیست؟با سرور نیم بها یک گیگ ایرانسل یا همراه اول بخر سه گیگ دانلود و مصرف کن حجم بستتو سه برابر میکنه وهزینه خریدوی پی ان به جیبت برمیگرده امتحان کن 😉 ",
   "url": "https://s32.picofile.com/file/8481014784/V2grop_1_9_22.apk.html",
   "showDefault": false
 }
