--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status":  true,
-  "text": "🚀🚀⚠️♻️ اینترنت گرون شده اما تو نگران نباش با کانفینگ های نیم بها هزینه هاتو نصف میکنی یک گیگ نت بخر  سه گیگ مصرف کن ",
-  "url": "https://s32.picofile.com/file/8481014784/V2grop_1_9_22.apk.html",
+  "text": "🅿️💲🔆پای نتورک لیست شد و هر یک دونش ۳ دلاره با کلیک روی این دکمه 🔴 توم نصب کن ورایگان استخراج کن استخراجش تا ۲۰ سال دیگه ادامه داره 😚",
+  "url": "https://minepi.com/samik73",
   "showDefault": false
 }
