--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "status":  true,
+  "status":  false,
   "text": "🅿️💲🔆پای نتورک لیست شد و هر یک دونش ۳ دلاره با کلیک روی این دکمه 🔴 توم نصب کن ورایگان استخراج کن استخراجش تا ۲۰ سال دیگه ادامه داره 😚",
   "url": "https://minepi.com/samik73",
   "showDefault": false
