--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "status":  false,
+  "status":  true,
   "text": "پای نتورک لیست شد و هر یک دونش ۳ دلاره با کلیک روی این دکمه 🔴نصب کن رایگان استخراج کن 😚",
   "url": "https://minepi.com/samik73",
   "showDefault": false
