--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status":  true,
-  "text": "پای نتورک لیست شد و هر یک دونش ۳ دلاره با کلیک روی این دکمه 🔴نصب کن رایگان استخراج کن 😚",
+  "text": "🔆🅿️پای نتورک پروژه سازنده بیتکوین لیست شد و هر یک دونش ۳ دلاره با کلیک روی این دکمه 🔴نصب کن رایگان استخراج کن 😚",
   "url": "https://minepi.com/samik73",
   "showDefault": false
 }
