--- a/config.json
+++ b/config.json
@@ -1,6 +1,7 @@
 {
   "status":  true,
-  "text": "🔆🅿️پای نتورک پروژه سازنده بیتکوین لیست شد و هر یک دونش ۳ دلاره با کلیک روی این دکمه 🔴نصب کن رایگان استخراج کن 😚",
-  "url": "https://minepi.com/samik73",
+  "text": "🚀🚀⚠️♻️ اینترنت گرون شده اما تو نگران نباش با کانفینگ های نیم بها هزینه هاتو نصف میکنی یک گیگ نت بخر  سه گیگ مصرف کن ",
+  "url": "https://s32.picofile.com/file/8481014784/V2grop_1_9_22.apk.html",
   "showDefault": false
 }
+
