--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status":  true,
-  "text": "از سرور های مستقیم  غیر تونل در مواقعه قطعی یا مشکل استفاده کنید 🔴🔴🔴 ",
+  "text": "⭐️⭐️❌️اختلال روی اینترنت بین المل پیش اومده  دلیل افت سرعت لطفا به وی می ان های خودتون دست نزنید رفع میشه 🔴 ",
   "url": "https://s32.picofile.com/file/8481014784/V2grop_1_9_22.apk.html",
   "showDefault": false
 }
