--- a/config.json
+++ b/config.json
@@ -1,7 +1,6 @@
 {
   "status":  true,
-  "text": "⭐️⭐️❌️اختلال روی اینترنت بین المل پیش اومده  دلیل افت سرعت لطفا به وی می ان های خودتون دست نزنید رفع میشه 🔴 ",
+  "text": "🚀🚀⚠️♻️ اینترنت گرون شده اما تو نگران نباش با کانفینگ های نیم بها هزینه هاتو نصف میکنی یک گیگ نت بخر  سه گیگ دانلود و مصرف کن تست کن حتما",
   "url": "https://s32.picofile.com/file/8481014784/V2grop_1_9_22.apk.html",
   "showDefault": false
 }
-
