--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status":  true,
-  "text": "⭐️⭐️✅️با سرور نیم بها یک گیگ ایرانسل یا همراه بخر سه گیگ دانلودکن حجم بستتو سه برابر میکنه وهزینه وی پی ان به جیبت برمیگرده امتحان کن 😉 ",
+  "text": "به دلیل قطع ارتباط فیبر شرکت زیرساخت مجددا بخشی از ظرفیت ارتباطی کشور قطع شده است⚠️ مشکل نت⚠️. از سرور های مستقیم استفاده کنید پر سرعت تره",
   "url": "https://s32.picofile.com/file/8481014784/V2grop_1_9_22.apk.html",
   "showDefault": false
 }
