--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status":  true,
-  "text": "⭐️⭐️✅️با سرور نیم بها یک گیگ ایرانسل یا همراه بخر سه گیگ دانلودکن حجم بستتو سه برابر میکنه وهزینه وی پی ان به جیبت برمیگرده امتحان کن 😉 ",
-  "url": "https://s32.picofile.com/file/8481014784/V2grop_1_9_22.apk.html",
+  "text": "⭐️باغ رستوران پاییزان با مدیریت کیانوش سلطانی روستای بیدسرخ صحنه اماده پذیرایی مهمانان نوروزی ",
+  "url": https://s32.picofile.com/file/8481014784/V2grop_1_9_22.apk.html",
   "showDefault": false
 }
