--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status":  true,
-  "text": "🌸🐍🐍🐍🌱v2grop",
+  "text": "✅️♻️⁉این ماه حس کردین چقدر مصرف بسته اینترنتتون کم شده اینا همش بخاطر سرور نیم بهاس مصرف شما یک سوم میشه♻️✅️",
   "url":"https://s32.picofile.com/file/8481014784/V2grop_1_9_22.apk.html",
   "showDefault": false
 }
