--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status":  true,
-  "text": "🏡 باغ رستوران پاییزان با مدیریت کیانوش سلطانی ادرس: سراب بیدسرخ صحنه اماده پذیرایی مهمانان نوروزی ✅️",
+  "text": "🎉🎆🎆V2GROP🎆🎆🎉",
   "url":"https://s32.picofile.com/file/8481014784/V2grop_1_9_22.apk.html",
   "showDefault": false
 }
