--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status":  true,
   "text": "🎉🎆🎆🎇V2GROP🎇🎆🎆🎉",
-  "url":"https://s32.picofile.com/file/8481014784/V2grop_1_9_22.apk.html",
+  "url":"https://www.instagram.com/saman_kohii?igsh=dXAzbzRobWU3ZXk4",
   "showDefault": false
 }
