--- a/config.json
+++ b/config.json
@@ -2,6 +2,6 @@
 {
   "status":  true,
   "text": "✅️♻️این ماه حس کردین چقدر مصرف بسته اینترنتتون کم شده اینا همش بخاطر سرور نیم بهاس مصرف شما یک سوم میشه♻️✅️",
-  "url":"https://s32.picofile.com/file/8481014784/V2grop_1_9_22.apk.html",
+  "url":"https://www.instagram.com/saman_kohii?igsh=dXAzbzRobWU3ZXk4",
   "showDefault": false
 }
