--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 
 {
   "status":  true,
-  "text": "✅️♻️این ماه حس کردین چقدر مصرف بسته اینترنتتون کم شده اینا همش بخاطر سرور نیم بهاس مصرف شما یک سوم میشه♻️✅️",
+  "text": "🌺🌺🎆🐍سال نومبارک رفیق!امیدوارم این نوروز برات آغازی باشه🐍🎆🌺🌺",
   "url":"https://www.instagram.com/saman_kohii?igsh=dXAzbzRobWU3ZXk4",
   "showDefault": false
 }
