--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 
 {
   "status":  true,
-  "text": "🌺🌺🎆🐍سال نومبارک رفیق!امیدوارم این نوروز برات آغازی باشه🐍🎆🌺🌺",
+  "text": "🌺🐍سال نومبارک رفیق!امیدوارم این نوروزبرات آغازی باشه🐍🌺",
   "url":"https://www.instagram.com/saman_kohii?igsh=dXAzbzRobWU3ZXk4",
   "showDefault": false
 }
