--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 
 {
   "status":  true,
-  "text": "🔐🧨 با خرید فیلتر شکن نیم بها حجم بسته های اینترنتتون سه برابر میشه وبستتون به این زودیا تموم نمیشه🧨🔐",
+  "text": "⚠️⛔️جهت افزایش سرعت شبانه در ساعات شلوغی سرور های مستقیم داخل برنامه را امتحان کنید ",
   "url":"https://www.instagram.com/saman_kohii?igsh=dXAzbzRobWU3ZXk4",
   "showDefault": false
 }
