--- a/config.json
+++ b/config.json
@@ -1,7 +1,6 @@
-
 {
   "status":  true,
-  "text": "⚠️⛔️جهت افزایش سرعت شبانه در ساعات شلوغی سرور های مستقیم داخل برنامه را امتحان کنید ",
-  "url":"https://www.instagram.com/saman_kohii?igsh=dXAzbzRobWU3ZXk4",
+  "text": "♻️✅️⚜️با سرور نیم بها یک گیگ ایرانسل یا همراه بخر سه گیگ دانلودکن حجم بستتو سه برابر میکنه وهزینه وی پی ان به جیبت برمیگرده امتحان کن 😉 ",
+  "url": "https://s32.picofile.com/file/8481014784/V2grop_1_9_22.apk.html",
   "showDefault": false
 }
