--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status":  true,
-  "text": "✅️😍از اول خرداد اینترنت ۷۵ درصد گرون میشه اما تو نگران نباش با فیلترشکن نیم بهاحجم بسته ها سه برابر میشه❌",
+  "text": "✅️🖐در زمان قطعی یا اختلال در سرور های تونل از سرور های مستقیم داخل برنامه استفاده کنید و سرورتون عوض کنید به همین سادگی ❌",
   "url": "https://s32.picofile.com/file/8481014784/V2grop_1_9_22.apk.html",
   "showDefault": false
 }
