--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status":  true,
-  "text": "♻️❎️با سرور نیم بها یک گیگ ایرانسل یا همراه بخر سه گیگ دانلودکن حجم بستتو سه برابر میکنه وهزینه وی پی ان به جیبت برمیگرده 😉 ",
+  "text": "⚠️⚠️⚠️با توجه به شرایط کنونی لطفا هر چند ساعت یک بار دکمه بروز رسانی اشتراک رو بزنید ❤️ ",
   "url": "https://t.me/v2group7",
   "showDefault": false
 }
