--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status":  true,
-  "text": "⚠️⚠️⚠️با توجه به شرایط کنونی لطفا هر چند ساعت یک بار دکمه بروز رسانی اشتراک رو بزنید ❤️ ",
+  "text": "⚠️⚠️ با توجه به شرایط لطفا هرچند ساعت یک باردکمه بروز رسانی اشتراک روبزنید وازسرور *تونل* استفاده کنید❤️ ",
   "url": "https://t.me/v2group7",
   "showDefault": false
 }
