--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status":  true,
-  "text": "🖤v2grop🖤",
+  "text": "🖤 اتصالی پایدار و ثابت و امن و قوی در تمام شرایط v2grop 🖤",
   "url": "https://t.me/v2group7",
   "showDefault": false
 }
