--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status":  true,
   "text": "🖤 اتصالی پایدار و ثابت و امن و قوی در تمام شرایط v2grop 🖤",
-  "url": "https://t.me/v2group7",
+  "url": "https://github.com/2dust/v2rayNG/releases/download/1.10.4/v2rayNG_1.10.4_universal.apk",
   "showDefault": false
 }
