--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status":  true,
-  "text": "🖤 اتصالی پایدار و ثابت و امن و قوی در تمام شرایط v2grop 🖤",
+  "text": "⚠️⚠️ با توجه به شرایط لطفا هرچند ساعت یک باردکمه بروز رسانی اشتراک روبزنید وازسرور *تونل* استفاده کنید❤️ ",
   "url": "https://t.me/v2group7",
   "showDefault": false
 }
