--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status":  true,
-  "text": "⚠️⚠️ با توجه به شرایط لطفا هرچند ساعت یک باردکمه بروز رسانی اشتراک روبزنید وازسرور *تونل* استفاده کنید❤️ ",
+  "text": " ✅️✅️❌️❌️اطلاعیه:اتصال برقرار شد لطفا تست کنید ❌️❌️✅️✅️",
   "url": "https://t.me/v2group7",
   "showDefault": false
 }
