--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status":  true,
-  "text": " ✅️✅️❌️❌️اطلاعیه:اتصال برقرار شد لطفا تست کنید ❌️❌️✅️✅️",
+  "text": " ✅️✅️❌️❌️اطلاعیه:لطفا صبوری کنیددر تلاش برای ارتباط پایداریم ❌️❌️✅️✅️",
   "url": "https://t.me/v2group7",
   "showDefault": false
 }
