--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status":  true,
-  "text": " ✅️✅️❌️❌️اطلاعیه:لطفا صبوری کنیددر تلاش برای ارتباط پایداریم ❌️❌️✅️✅️",
-  "url": "https://t.me/v2group7",
+  "text": "⚠️❌️از سرور های تونل استفاده کنید اگه فیلتر شکنت مشکل داره 🟢دکمه سبز بزن  پشتیبانی پیام بده⛔️",
+  "url": "https://t.me/Cafefilm00",
   "showDefault": false
 }
