--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status":  true,
-  "text": "⚠️❌️از سرور های تونل استفاده کنید اگه فیلتر شکنت مشکل داره 🟢دکمه سبز بزن  پشتیبانی پیام بده⛔️",
-  "url": "https://t.me/Cafefilm00",
+  "text": "اگه پینگتون بالاس حتما برای اپدیت برنامه مراجعه کنید یا دکمه ✅️بزنید نسخه جدید دانلود شود ",
+  "url": "https://github.com/2dust/v2rayNG/releases/download/1.10.8/v2rayNG_1.10.8_universal.apk",
   "showDefault": false
 }
