--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "status":  true,
+  "status":  false,
   "text": "اگه پینگتون بالاس حتما برای اپدیت برنامه مراجعه کنید یا دکمه ✅️بزنید نسخه جدید دانلود شود حتما نسخه قبلی ابتدا حذف شود",
   "url": "https://github.com/2dust/v2rayNG/releases/download/1.10.8/v2rayNG_1.10.8_universal.apk",
   "showDefault": true
