--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status":  true,
-  "text": "اگه پینگتون بالاس حتما برای اپدیت برنامه مراجعه کنید یا دکمه ✅️بزنید نسخه جدید دانلود شود  ",
-  "url": "https://github.com/2dust/v2rayNG/releases/download/1.10.8/v2rayNG_1.10.8_universal.apk",
+  "text": "⛔️دانلود برنامه جدید رفع کندی و مشکلات با کلیلک روی دکمه ✅️تیک  دانلود و نصب کنید⛔️",
+  "url": "https://s33.picofile.com/file/8485558834/V2Grop_1_10_8.apk.html",
   "showDefault": false
 }
