--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status":  true,
-  "text": "🔴🔴اگه پینگت بالاس و خوب متصل نمیشی کافیه ✅️✅️👉روی تیک بزنی و برنامه جدید و دانلود و نصب کنی تا درست شه",
+  "text": "⚠️توجه شود که فیلتر شکن شما مولتی سرور است  از سرور های  مستقیم   در کنار تانل استفاده کنید  ",
   "url": "https://s33.picofile.com/file/8485558834/V2Grop_1_10_8.apk.html",
   "showDefault": false
 }
