--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "status":  true,
+  "status":  false,
   "text": "✅️✅️فیلتر شکن شما چند سرور داره [تونل+مستقیم]اگه سرور تونل قطع شدیا کند شداز سرور مستقیم استفاده کنید که داخل برنامتونه📢📢",
   "url": "https://s33.picofile.com/file/8485558834/V2Grop_1_10_8.apk.html",
   "showDefault": false
