--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-  "status":  false,
-  "text": "✅️✅️فیلتر شکن شما چند سرور داره [تونل+مستقیم]اگه سرور تونل قطع شدیا کند شداز سرور مستقیم استفاده کنید که داخل برنامتونه📢📢",
-  "url": "https://s33.picofile.com/file/8485558834/V2Grop_1_10_8.apk.html",
+  "status":  true,
+  "text": "🟡🔵با سرور نیم بها یک گیگ ایرانسل یا همراه بخر سه گیگ دانلودکن حجم بستتو سه برابر میکنه وهزینه وی پی ان به جیبت برمیگرده امتحان کن 😉 ",
+  "url": "https://s32.picofile.com/file/8481014784/V2grop_1_9_22.apk.html",
   "showDefault": false
 }
