--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status":  true,
-  "text": "⭕️⭕️توجه کن این ماه چقدر بسته اینترنتت دیر تموم میشه با سرور های نیم بها حجم بستت سه برابر میشه ⭕️⭕️",
+  "text": "⚠️♻️اموزش:فیلتر شکن شما مولتی لینکه و دو مدل سرور داره اگه تونل به هر دلیلی مشکل داشت از مستقیم استفاده کنید ⚠️⛔️",
   "url": "https://s32.picofile.com/file/8481014784/V2grop_1_9_22.apk.html",
   "showDefault": false
 }
