--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status":  true,
-  "text": "⚠️♻️اموزش:فیلتر شکن شما مولتی لینکه و دو مدل سرور داره اگه تونل به هر دلیلی مشکل داشت از مستقیم استفاده کنید ⚠️⛔️",
+  "text": "⚠️🚀برای افزایش سرعت شبانه از سرور های مستقیم ⚡️⚡️استفاده نمایید⚠️🚀",
   "url": "https://s32.picofile.com/file/8481014784/V2grop_1_9_22.apk.html",
   "showDefault": false
 }
