--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status":  true,
-  "text": "⚠️🚀برای افزایش سرعت شبانه از سرور های مستقیم ⚡️⚡️استفاده نمایید⚠️🚀",
+  "text": "🟢🟢با فیلتر شکن های ما و سرور نیم بها مصرف حجم بسته اینترنت شما یک سوم میشود🟢🟢 ",
   "url": "https://s32.picofile.com/file/8481014784/V2grop_1_9_22.apk.html",
   "showDefault": false
 }
