Update text field in config.json

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status":  true,
-  "text": "🟢🟢با فیلتر شکن های ما و سرور نیم بها مصرف حجم بسته اینترنت شما یک سوم میشود🟢🟢 ",
+  "text": "🎃🎃🎃v2grop🎃🎃🎃",
   "url": "https://s32.picofile.com/file/8481014784/V2grop_1_9_22.apk.html",
   "showDefault": false
 }
