Update text field in config.json

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status":  true,
-  "text": "🎃🎃🎃v2grop🎃🎃🎃",
+  "text": "🥇سرعت+امنیت=v2grop🥇",
   "url": "https://t.me/v2group7",
   "showDefault": false
 }
