--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status":  true,
-  "text": "🥇سرعت+امنیت=v2grop🥇",
+  "text": "⚠️⚠️برای افزایش سرعت شبانه از سرور های مستقیم⚡️ داخل فیلترشکنتون استفاده کنید ⚠️⚠️",
   "url": "https://t.me/v2group7",
   "showDefault": false
 }
