Update notification text in config.json

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status":  true,
-  "text": "⚠️⚠️برای افزایش سرعت شبانه از سرور های مستقیم⚡️ داخل فیلترشکنتون استفاده کنید ⚠️⚠️",
+  "text": "📢📢 میدونی با خرید سرور نیم بها مصرف اینترنتت یک سوم میشه و هزینه های خرید بستت خیلی پاین میاد🔔🔔",
   "url": "https://t.me/v2group7",
   "showDefault": false
 }
