--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status":  true,
-  "text": "📢📢 میدونی با خرید سرور نیم بها مصرف اینترنتت یک سوم میشه و هزینه های خرید بستت خیلی پاین میاد🔔🔔",
+  "text": "🍁🍁توجه برای افزایش سرعت فیلترشکنتون در شب ها از سرور مستقیمش استفاده کنید🍂🍂",
   "url": "https://t.me/v2group7",
   "showDefault": false
 }
