Update notification text in config.json

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status":  true,
-  "text": "🍁🍁توجه برای افزایش سرعت فیلترشکنتون در شب ها از سرور مستقیمش استفاده کنید🍂🍂",
+  "text": "♻️❗️سرور های نیم بها مصرف بسته اینترنتت رو یک سوم میکنه و دیگه بستت زود تموم نمیشه ♻️❗️",
   "url": "https://t.me/v2group7",
   "showDefault": false
 }
