Update text message in config.json

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status":  true,
-  "text": "♻️❗️سرور های نیم بها مصرف بسته اینترنتت رو یک سوم میکنه و دیگه بستت زود تموم نمیشه ♻️❗️",
+  "text": "😈اینترنت گرون شده امااا با فیلترشکن ما و سرور نیم بها مصرف حجم بستت یک سوم میشه پس حالشو ببر😈",
   "url": "https://t.me/v2group7",
   "showDefault": false
 }
