Update text and URL in config.json

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status":  true,
-  "text": "😈اینترنت گرون شده امااا با فیلترشکن ما و سرور نیم بها مصرف حجم بستت یک سوم میشه پس حالشو ببر😈",
-  "url": "https://t.me/v2group7",
+  "text": "❄️ویژه:اگه میخوای با قابلیت های هوش مصنوعی اشناشی درامدتو زیاد کنی و اکانت پریمیوم چت جی بیتی ارزان بخری روی هندوانه🍉🍉 بزن و عضو شو ❄️",
+  "url": "https://t.me/algpt1",
   "showDefault": false
 }
