--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status":  true,
-  "text": "❄️ویژه:اگه میخوای با قابلیت های هوش مصنوعی اشناشی درامدتو زیاد کنی و اکانت پریمیوم چت جی بیتی ارزان بخری روی هندوانه🍉🍉 بزن و عضو شو ❄️",
+  "text": "❄️🎄🎄🎅happy christmas🎅🎄🎄❄️",
   "url": "https://t.me/algpt1",
   "showDefault": false
 }
