--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status":  true,
-  "text": "❄️🎄🎄🎅happy christmas🎅🎄🎄❄️",
+  "text": "❄️🎄برای افزایش سرعت در شب ها از سرور مستقیم استفاده کنید 🎄❄️",
   "url": "https://t.me/algpt1",
   "showDefault": false
 }
