--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status":  true,
-  "text": "❄️🎄برای افزایش سرعت در شب ها از سرور مستقیم استفاده کنید 🎄❄️",
-  "url": "https://t.me/algpt1",
+  "text": "⛔️⚠️اموزش:درمواقع ضروری ازتک به تک سرور های داخل برنامه تست پینگ بگیرید و به سروری که پینگ دادمتصل شوید⛔️⚠️",
+  "url": "https://t.me/v2group7",
   "showDefault": false
 }
