--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status":  true,
-  "text": "⛔️⚠️اموزش:درمواقع ضروری ازتک به تک سرور های داخل برنامه تست پینگ بگیرید و به سروری که پینگ دادمتصل شوید⛔️⚠️",
+  "text": "✅️✅️اتصال برقرار شد لطفا از کانفینگ های تونل استفاده کنید✅️✅️به همه اشتراک ها چند روز اضافه شد ",
   "url": "https://t.me/v2group7",
   "showDefault": false
 }
