--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status":  true,
-  "text": "✅️✅️اتصال برقرار شد لطفا از کانفینگ های تونل استفاده کنید✅️✅️به همه اشتراک ها چند روز اضافه شد ",
+  "text": "⚠️تمامی کانفینگ های تونل و مستقیم رو چک کنید هر کدوم سرعت بیشتری داد از اون استفاده کنید ⚠️ ",
   "url": "https://t.me/v2group7",
   "showDefault": false
 }
