Update configuration text for tunnel speed improvements

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status":  true,
-  "text": "⚠️تمامی کانفینگ های تونل و مستقیم رو چک کنید هر کدوم سرعت بیشتری داد از اون استفاده کنید ⚠️ ",
+  "text": "🔒📌سرعت کانفیگ های تونل رو افزایش دادیم حتما  امتحان کنید در مواقع ضرور از مستقیم استفاده شود🔒📌 ",
   "url": "https://t.me/v2group7",
   "showDefault": false
 }
