--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "status":  true,
-  "text": "🔒📌سرعت کانفیگ های تونل رو افزایش دادیم حتما  امتحان کنید در مواقع ضرور از مستقیم استفاده شود🔒📌 ",
+  "text": "🔒📌 تمام سرورا متصله🟢سرعت کانفیگ های تونل رو افزایش دادیم حتما  امتحان کنید در مواقع ضرور از مستقیم استفاده شود🔒📌 ",
   "url": "https://t.me/v2group7",
   "showDefault": false
 }
